<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/home"
        android:title="@string/ana_sayfa" />
    <item
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/search"
        android:title="@string/ara" />
    <item
        android:id="@+id/video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/video"
        android:title="@string/cok_yakinda" />
    <item
        android:id="@+id/download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/download"
        android:title="@string/indirilenler" />
    <item
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/menu"
        android:title="@string/daha_fazla" />
</menu>